--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,9 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
+variables: 
+  rootDir: 'my-app'
+  buildDir: '$(rootDir)/build'
   steps:
   - task: NodeToo1@0
     inputs:
