--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,14 +9,37 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
+variables: 
+  rootDir: 'my-app'
+  buildDir: '$(rootDir)/build'
+  
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '10.x'
+    displayName: 'Install Node.js'
+  
+  - script:
+      cd $(rootDir)
+      npm install
+      npm run build
+      cd ..
+    displayName: 'npm install and build'
+  
+  - task: ArchiveFiles@2
+    inputs:
+      rootFolderOrFile: '$(buildDir)'
+      includeRootFolder: false
+      archiveType: 'zip'
+      archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+      replaceExistingArchive: true
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+  - task: PublishBuildArtifacts@1
+    inputs:
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+      ArtifactName: 'drop'
+      publishLocation: 'Container'
+
 
  
 
