--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
       versionSpec: '10.x'
     displayName: 'Install Node.js'
   
-  - script:
+  - script: |
       cd $(rootDir)
       npm install
       npm run build
